trying to get 100% coverage